--- a/TCup/Base.lproj/Main.storyboard
+++ b/TCup/Base.lproj/Main.storyboard
@@ -293,16 +293,17 @@
                         <outlet property="temperatureChosenLabel" destination="NiR-P7-a21" id="6Xw-HL-Vab"/>
                         <outlet property="temperatureSlider" destination="69R-P4-9Dz" id="1KI-QX-Y9I"/>
                         <outlet property="waitGoodTemperatureView" destination="3uS-E2-LP3" id="46Y-At-fWR"/>
+                        <segue destination="vXZ-lx-hvc" kind="modal" identifier="readySegue" id="uv2-C7-eUg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="boz-30-q0r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="551" y="354"/>
         </scene>
-        <!--View Controller-->
+        <!--Tea Ready View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="TeaReadyViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -310,13 +311,56 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tea-Cup" translatesAutoresizingMaskIntoConstraints="NO" id="wOk-4E-Kda">
+                                <rect key="frame" x="10" y="134" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="KUZ-MJ-Vs7"/>
+                                    <constraint firstAttribute="height" constant="300" id="fye-hg-s4R"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mU6-TE-aQs">
+                                <rect key="frame" x="63" y="509" width="195" height="30"/>
+                                <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="195" id="B6j-Uk-caS"/>
+                                    <constraint firstAttribute="height" constant="30" id="W31-V9-h7d"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
+                                <state key="normal" title="FAIRE UN AUTRE THÉ">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="selected">
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="doAnotherTea:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Q5D-h6-d6I"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Votre thé est prêt et à température idéale !" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="79i-hJ-ivG">
+                                <rect key="frame" x="8" y="44" width="304" height="82"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.74117647060000003" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="79i-hJ-ivG" secondAttribute="trailing" constant="8" id="5W7-M4-pkc"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="mU6-TE-aQs" secondAttribute="bottom" constant="29" id="8j8-U3-HAI"/>
+                            <constraint firstAttribute="centerX" secondItem="wOk-4E-Kda" secondAttribute="centerX" id="BUT-af-3ic"/>
+                            <constraint firstAttribute="centerX" secondItem="mU6-TE-aQs" secondAttribute="centerX" id="HP1-Iy-hWB"/>
+                            <constraint firstItem="wOk-4E-Kda" firstAttribute="top" secondItem="79i-hJ-ivG" secondAttribute="bottom" constant="8" id="iex-Qo-oh0"/>
+                            <constraint firstItem="79i-hJ-ivG" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="8" id="mVg-vS-ojg"/>
+                            <constraint firstAttribute="centerY" secondItem="wOk-4E-Kda" secondAttribute="centerY" id="onr-xS-wSD"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="DUQ-Is-tXy"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="953" y="362"/>
+            <point key="canvasLocation" x="953" y="354"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8bh-uC-qx8">
